imagem anime death note

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/images/deathnote.jpg">
     <title>Animeflix</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">Animeflix</h2>
+            <h2 class="logo">ANIMEFLIX</h2>
             <!-- barra de navegação -->
             <nav>
                 <a href="">Início</a>
@@ -21,6 +22,14 @@
             <!-- barra de navegação -->
         </div>
     </header>
+    <main>
+        <div class="anime-principal">
+            <div class="container">
+                <h3 class="titulo">Death Note</h3>
+                <p class="descricao">O jovem estudante Light Yagami acha um caderno com poderes sobrenaturais, chamado Death Note, no qual é possível matar uma pessoa apenas escrevendo seu nome no caderno. Quando o descobre, Light tenta eliminar todos os criminosos do mundo e dar à sociedade um mundo livre do mal. Mas seus planos começam a sair de rumo quando o detetive L resolve contrariar Light.</p>
+            </div>
+        </div>
+    </main>
     <footer>
     </footer>
 </body>
