transparência no background

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/images/deathnote.jpg">
+    <link rel="stylesheet" href="style/main.css">
     <title>Animeflix</title>
 </head>
 <body>
@@ -27,8 +26,13 @@
             <div class="container">
                 <h3 class="titulo">Death Note</h3>
                 <p class="descricao">O jovem estudante Light Yagami acha um caderno com poderes sobrenaturais, chamado Death Note, no qual é possível matar uma pessoa apenas escrevendo seu nome no caderno. Quando o descobre, Light tenta eliminar todos os criminosos do mundo e dar à sociedade um mundo livre do mal. Mas seus planos começam a sair de rumo quando o detetive L resolve contrariar Light.</p>
+                <div class="botoes"> 
+                    <button role="button"="botao">Assitir agora</button>
+                    <button role="button" class="botao">Downloads</button>
+                </div>
             </div>
-        </div>
+           
+           
     </main>
     <footer>
     </footer>
