--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h3 class="titulo">Death Note</h3>
                 <p class="descricao">O jovem estudante Light Yagami acha um caderno com poderes sobrenaturais, chamado Death Note, no qual é possível matar uma pessoa apenas escrevendo seu nome no caderno. Quando o descobre, Light tenta eliminar todos os criminosos do mundo e dar à sociedade um mundo livre do mal. Mas seus planos começam a sair de rumo quando o detetive L resolve contrariar Light.</p>
                 <div class="botoes"> 
-                    <button role="button"="botao">Assitir agora</button>
+                    <button role="button" class="botao">Assitir agora</button>
                     <button role="button" class="botao">Downloads</button>
                 </div>
             </div>
