inserção de ícones

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <h3 class="titulo">Death Note</h3>
                 <p class="descricao">O jovem estudante Light Yagami acha um caderno com poderes sobrenaturais, chamado Death Note, no qual é possível matar uma pessoa apenas escrevendo seu nome no caderno. Quando o descobre, Light tenta eliminar todos os criminosos do mundo e dar à sociedade um mundo livre do mal. Mas seus planos começam a sair de rumo quando o detetive L resolve contrariar Light.</p>
                 <div class="botoes"> 
-                    <button role="button" class="botao">Assitir agora</button>
-                    <button role="button" class="botao">Downloads</button>
+                    <button role="button" class="botao"><i class="fa-solid fa-play"></i></i>ASSISTIR AGORA</button>
+                    <button role="button" class="botao"><i class="fa-solid fa-download"></i>DOWNLOADS</button>
                 </div>
             </div>
            
@@ -36,5 +36,6 @@
     </main>
     <footer>
     </footer>
+    <script src="https://kit.fontawesome.com/0385ab4e65.js" crossorigin="anonymous"></script>
 </body>
 </html>
